# StableRWA

./: .cursorrules  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  DESCRIPTION.md  Dockerfile  Dockerfile.enterprise  Dockerfile.gateway  FINAL_SUCCESS_REPORT.md  FINAL_UPDATE_REPORT.md  GITHUB_CACHE_ISSUE_RESOLUTION.md  GITHUB_PREPARATION_CHECKLIST.md  GITHUB_PUSH_SUCCESS.md  LICENSE  Makefile  PROJECT_RELEASE_READY.md  PROJECT_SUMMARY.md  PROJECT_TAGLINE.md  README.md  README_CN.md  README_EN.md  SCREENSHOT_INSTRUCTIONS.md  SCREENSHOT_SETUP_GUIDE.md  SCREENSHOT_VERIFICATION_COMPLETE.md  SECURITY.md  TESTING_STRATEGY.md  UPDATE_COMPLETE.md  clippy.toml  docker-compose.basic.yml  docker-compose.dev.yml  docker-compose.enterprise.yml  docker-compose.monitoring.yml  docker-compose.simple.yml  docker-compose.test.yml  docker-compose.yml  rustfmt.toml
.cargo/: config.toml
.github/: README.md
ai-service/: Cargo.toml  Dockerfile  README.md
ai-service/src/: handlers.rs  lib.rs  main.rs  models.rs  openai.rs  service.rs
ai-service/tests/: integration.rs
audit-service/: Cargo.toml  Dockerfile  README.md
auth-service/: Cargo.toml  Dockerfile
bsc-integration/: Cargo.toml  Dockerfile
bsc-integration/src/: lib.rs  main.rs
bsc-integration/tests/: integration.rs
collateral-management/: Cargo.toml  Dockerfile  README.md
collateral-management/src/: lib.rs  main.rs
collateral-management/tests/: integration.rs
core-ai/: Cargo.toml
core-ai-risk/: Cargo.toml
core-ai-risk/src/: credit_scoring.rs  error.rs  fraud_detection.rs  lib.rs  service.rs  types.rs
core-ai/src/: analytics.rs  lib.rs  models.rs  openai.rs  plugins.rs
core-analytics/: Cargo.toml
core-analytics/src/: aggregation.rs  error.rs  lib.rs  metrics.rs  reporting.rs  service.rs  types.rs
core-analytics/tests/: analytics_tests.rs
core-api-gateway/: Cargo.toml
core-api-gateway/src/: lib.rs
core-blockchain/: Cargo.toml
core-blockchain/src/: bsc.rs  contracts.rs  error.rs  ethereum.rs  lib.rs  traits.rs  transaction_processor.rs  types.rs  wallet.rs
core-blockchain/src/adapters/: mod.rs
core-blockchain/src/contracts/: erc1155.rs  erc20.rs  erc721.rs  factory.rs  governance.rs  mod.rs  rwa_token.rs  staking.rs
core-bridge/: Cargo.toml
core-bridge/src/: atomic_swap.rs  error.rs  lib.rs  liquidity.rs  relayer.rs  security.rs  service.rs  transfer.rs  types.rs  validator.rs
core-bridge/tests/: integration_tests.rs
core-compliance/: COMPLETION_SUMMARY.md  Cargo.toml  ENTERPRISE_COMPLIANCE_REPORT.md
core-compliance/src/: aml.rs  audit.rs  error.rs  jurisdiction.rs  kyc.rs  lib.rs  reporting.rs  sanctions.rs  service.rs  types.rs
core-config/: Cargo.toml
core-config/src/: environment.rs  lib.rs
core-database/: Cargo.toml
core-database/src/: lib.rs  migrations.rs  postgres.rs  redis_client.rs  repository.rs
core-defi/: Cargo.toml
core-defi/src/: amm.rs  derivatives.rs  error.rs  flash_loans.rs  governance.rs  lending.rs  lib.rs  liquidity_pools.rs  price_oracle.rs  service.rs  staking.rs  types.rs  yield_farming.rs
core-did/: Cargo.toml  README.md  README_TESTING.md  TEST_REPORT.md
core-did/examples/: basic_usage.rs
core-did/src/: credential.rs  did.rs  document.rs  error.rs  key_manager.rs  lib.rs  registry.rs  resolver.rs  service.rs  utils.rs  verifier.rs
core-events/: Cargo.toml
core-events/src/: event_bus.rs  event_store.rs  handlers.rs  lib.rs  message_queue.rs  saga.rs
core-ipfs/: Cargo.toml
core-ipfs/src/: client.rs  gateway.rs  lib.rs  metadata.rs  pinning.rs  storage.rs  utils.rs
core-monitoring/: Cargo.toml
core-monitoring/benches/: monitoring_benchmarks.rs
core-monitoring/src/: alerting.rs  anomaly_detection.rs  dashboards.rs  distributed_tracing.rs  error.rs  health_checks.rs  lib.rs  log_aggregation.rs  logging.rs  metrics.rs  notification.rs  performance.rs  scheduler.rs  service.rs  types.rs
core-monitoring/tests/: integration_tests.rs
core-nft/: Cargo.toml  DEVELOPMENT_SUMMARY.md  README.md
core-nft/examples/: basic_usage.rs
core-nft/src/: erc721.rs  error.rs  lib.rs  mock_services.rs  service.rs  types.rs
core-observability/: Cargo.toml
core-observability/src/: health.rs  lib.rs  logging.rs  metrics.rs  tracing_setup.rs
core-oracle/: Cargo.toml
core-oracle/benches/: oracle_benchmarks.rs
core-oracle/src/: aggregator.rs  band.rs  chainlink.rs  error.rs  lib.rs  pyth.rs  service.rs  types.rs
core-oracle/tests/: integration_tests.rs
core-privacy/: Cargo.toml
core-privacy/src/: error.rs  lib.rs  service.rs  types.rs  zkp.rs
core-risk-management/: Cargo.toml
core-risk-management/src/: assessment.rs  emergency.rs  error.rs  hedging.rs  insurance.rs  lib.rs  models.rs  monitoring.rs  service.rs  types.rs
core-security/: Cargo.toml
core-security/src/: auth.rs  crypto.rs  jwt.rs  lib.rs  rate_limit.rs  validation.rs
core-smart-contract/: Cargo.toml
core-smart-contract/benches/: smart_contract_benchmarks.rs
core-smart-contract/src/: compiler.rs  deployer.rs  error.rs  lib.rs  service.rs  types.rs
core-smart-contract/tests/: integration_tests.rs
core-stablecoin/: Cargo.toml
core-stablecoin/src/: compliance.rs  error.rs  governance.rs  issuance.rs  lib.rs  liquidity.rs  monitoring.rs  oracle.rs  redemption.rs  risk_management.rs  service.rs  stability.rs  types.rs
core-stablecoin/src/mechanisms/: algorithmic.rs  crypto_collateralized.rs  fiat_collateralized.rs  hybrid.rs  mod.rs  rwa_backed.rs
core-trading/: Cargo.toml
core-trading/benches/: trading_benchmarks.rs
core-trading/src/: error.rs  lib.rs  liquidity.rs  market_data.rs  matching.rs  order_book.rs  settlement.rs  types.rs
core-trading/tests/: trading_integration_tests.rs
core-utils/: Cargo.toml
core-utils/src/: fixtures.rs  helpers.rs  lib.rs  testing.rs  validation.rs
core-wallet/: Cargo.toml
core-wallet/src/: error.rs  hardware.rs  key_management.rs  lib.rs  multisig.rs  recovery.rs  service.rs  types.rs
nft-minting/: Cargo.toml  Dockerfile  README.md
nft-minting/src/: lib.rs  main.rs
nft-minting/tests/: integration.rs
(+344 files in other folders)
