[package]
name = "ai-service"
version = "0.1.0"
edition = "2021"
authors = ["arkSong <arksong2018@gmail.com>"]
description = "Enterprise-grade AI microservice for StableRWA platform."
license = "MIT OR Apache-2.0"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
chrono = "0.4"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
dotenv = "0.15"
env_logger = "0.10"
tokio = { version = "1.32", features = ["full"] } 