[package]
name = "bsc-integration"
version = "0.1.0"
edition = "2021"
authors = ["arkSong <arksong2018@gmail.com>"]
description = "Binance Smart Chain (BSC) integration microservice for StableRWA platform."
license = "MIT OR Apache-2.0"

[dependencies]
core-blockchain = { path = "../core-blockchain" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = "0.4" 