[package]
name = "core-ai-risk"
version = "0.1.0"
edition = "2021"
authors = ["arkSong <arksong2018@gmail.com>"]
description = "AI-driven risk assessment and fraud detection for StableRWA platform"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arkSong/rwa-platform"
keywords = ["ai", "risk", "fraud", "machine-learning", "credit-scoring"]
categories = ["finance", "science"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Decimal arithmetic
rust_decimal = { version = "1.33", features = ["serde-float"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "rust_decimal"] }

# Redis for caching
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Machine Learning
candle-core = { version = "0.3", optional = true }
candle-nn = { version = "0.3", optional = true }
candle-transformers = { version = "0.3", optional = true }
tch = { version = "0.13", optional = true }

# Statistics and Math
statrs = "0.16"
nalgebra = "0.32"
ndarray = "0.15"
linfa = { version = "0.7", features = ["serde"] }
linfa-clustering = "0.7"
linfa-linear = "0.7"
linfa-logistic = "0.7"
linfa-trees = "0.7"

# Time series analysis
ta = "0.5"

# Graph algorithms
petgraph = "0.6"

# Configuration
config = "0.14"

# Metrics
prometheus = "0.13"

# Rate limiting
governor = "0.6"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Parallel processing
rayon = "1.8"

# Fast hashing
fxhash = "0.2"

# Math operations
num-bigint = "0.4"
num-traits = "0.2"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# CSV processing
csv = "1.3"

# Feature engineering
polars = { version = "0.35", features = ["lazy", "temporal", "strings"] }

# Internal dependencies
core-utils = { path = "../core-utils" }
core-security = { path = "../core-security" }
core-analytics = { path = "../core-analytics" }
core-blockchain = { path = "../core-blockchain" }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.8"

[features]
default = ["fraud-detection", "credit-scoring", "market-risk", "operational-risk"]
fraud-detection = []
credit-scoring = []
market-risk = []
operational-risk = []
deep-learning = ["candle-core", "candle-nn", "candle-transformers"]
pytorch = ["tch"]
ensemble-models = []
real-time-scoring = []
