[package]
name = "core-analytics"
version = "0.1.0"
edition = "2021"
authors = ["arkSong <arksong2018@gmail.com>"]
description = "Data analytics and reporting system for StableRWA platform"
license = "MIT"
repository = "https://github.com/arkSong/rwa-platform"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# HTTP client for external API calls
reqwest = { version = "0.11", features = ["json"] }

# Database (optional, for persistent storage)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"], optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.13"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Decimal arithmetic for financial calculations
rust_decimal = { workspace = true }

# Statistical calculations
statrs = "0.16"

# Data processing with Polars
polars = { version = "0.35", features = ["lazy", "temporal", "strings", "csv", "json", "parquet"] }

# Time series analysis
# arrow = { version = "50.0", features = ["csv", "json"] }

# Machine learning (optional)
candle-core = { version = "0.3", optional = true }
candle-nn = { version = "0.3", optional = true }
candle-transformers = { version = "0.3", optional = true }

# Plotting and visualization (optional)
plotters = { version = "0.3", optional = true }

# PDF generation for reports
printpdf = { version = "0.6", optional = true }

# Excel file generation
rust_xlsxwriter = { version = "0.60", optional = true }

# Template engine for reports
tera = { version = "1.19", optional = true }

# Caching
moka = { version = "0.12", features = ["future"] }

# Parallel processing
rayon = "1.8"

# Fast hashing
fxhash = "0.2"

# CPU count for parallel processing
num_cpus = "1.16"

# Internal dependencies
core-utils = { path = "../core-utils" }
core-security = { path = "../core-security" }
core-asset-lifecycle = { path = "../core-asset-lifecycle" }
core-risk-management = { path = "../core-risk-management" }

[dev-dependencies]
tokio-test = "0.4"
fake = "2.10"
mockall = "0.11"
tempfile = "3.8"
criterion = "0.5"

[features]
default = ["reports"]
database = ["sqlx"]
ml = ["candle-core", "candle-nn", "candle-transformers"]
visualization = ["plotters"]
reports = ["printpdf", "rust_xlsxwriter", "tera"]

# [[bench]]
# name = "analytics_benchmarks"
# harness = false
