[package]
name = "core-bridge"
version = "0.1.0"
edition = "2021"
authors = ["arkSong <arksong2018@gmail.com>"]
description = "Cross-chain bridge services for StableRWA platform"
license = "MIT"
repository = "https://github.com/arkSong/rwa-platform"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# HTTP client for external API calls
reqwest = { version = "0.11", features = ["json"] }

# Cryptography
sha2 = "0.10"
hex = "0.4"
secp256k1 = "0.28"
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }

# Database (optional, for persistent storage)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"], optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.13"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Decimal arithmetic for financial calculations
rust_decimal = { version = "1.0", features = ["serde-json"] }

# Ethereum integration
ethers = { version = "2.0", features = ["ws", "rustls"] }

# Bitcoin integration
bitcoin = "0.31"
bitcoincore-rpc = { version = "0.17", optional = true }

# Substrate/Polkadot integration
subxt = { version = "0.32", optional = true }

# Cosmos SDK integration
cosmrs = { version = "0.15", optional = true }

# State management
dashmap = "5.5"

# Atomic operations
atomic = "0.6"

# Rate limiting
governor = "0.6"

# Merkle tree for proofs
merkle = "0.3"

# Internal dependencies
core-utils = { path = "../core-utils" }
core-security = { path = "../core-security" }
core-blockchain = { path = "../core-blockchain" }

[dev-dependencies]
tokio-test = "0.4"
fake = "2.10"
mockall = "0.11"
wiremock = "0.5"

[features]
default = ["ethereum", "bitcoin"]
database = ["sqlx"]
ethereum = ["ethers"]
bitcoin = ["bitcoin", "bitcoincore-rpc"]
polkadot = ["subxt"]
cosmos = ["cosmrs"]
all-chains = ["ethereum", "bitcoin", "polkadot", "cosmos"]
