[package]
name = "core-did"
version = "0.1.0"
edition = "2021"
authors = ["arkSong <arksong2018@gmail.com>"]
description = "Decentralized Identity (DID) system for RWA platform"
license = "MIT"
repository = "https://github.com/rwa-platform/rwa-platform"

[dependencies]
# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

# Cryptography
ring = { workspace = true }
ed25519-dalek = "2.1"
x25519-dalek = "2.0"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
rand = "0.8"

# JSON Web Tokens and Keys
jsonwebtoken = { workspace = true }

# HTTP client for DID resolution
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# URL parsing
url = "2.5"

# Internal dependencies
core-config = { path = "../core-config" }
core-utils = { path = "../core-utils" }
core-security = { path = "../core-security" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[features]
default = ["resolver", "verifier"]
resolver = []
verifier = []
issuer = []
