[package]
name = "core-monitoring"
version = "0.1.0"
edition = "2021"
authors = ["arkSong <arksong2018@gmail.com>"]
description = "Real-time monitoring and alerting system for StableRWA platform"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arkSong/rwa-platform"
keywords = ["monitoring", "alerting", "observability", "metrics", "tracing"]
categories = ["development-tools::debugging", "web-programming"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Decimal arithmetic
rust_decimal = { version = "1.33", features = ["serde-float"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.21"
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.19", features = ["rt-tokio"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# WebSocket for real-time updates
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "rust_decimal"] }

# Redis for caching and pub/sub
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "streams"] }

# Metrics
prometheus = { version = "0.13", features = ["process"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Time series database
influxdb = { version = "0.7", features = ["reqwest-client"] }

# Configuration
config = "0.14"

# Rate limiting
governor = "0.6"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Parallel processing
rayon = "1.8"

# Fast hashing
fxhash = "0.2"

# Statistics
statrs = "0.16"

# Email notifications
lettre = { version = "0.11", features = ["tokio1", "tokio1-rustls-tls", "smtp-transport"] }

# Slack notifications
slack-hook = "0.8"

# SMS notifications
twilio = { version = "0.3", optional = true }

# Push notifications
fcm = { version = "0.9", optional = true }

# Template engine for alerts
handlebars = "5.0"

# Cron for scheduling
cron = "0.12"

# System metrics
sysinfo = "0.29"

# Network monitoring
ping = "0.5"

# Internal dependencies
core-utils = { path = "../core-utils" }
core-security = { path = "../core-security" }
core-analytics = { path = "../core-analytics" }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.8"

[features]
default = ["prometheus", "influxdb", "alerting", "dashboards"]
prometheus = []
influxdb = []
grafana = []
alerting = []
dashboards = []
sms = ["twilio"]
push-notifications = ["fcm"]
distributed-tracing = []
log-aggregation = []
