[package]
name = "core-observability"
version = "0.1.0"
edition = "2021"
authors = ["arkSong <arksong2018@gmail.com>"]
description = "Observability utilities for RWA platform - logging, metrics, tracing"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-jaeger = { workspace = true, optional = true }
prometheus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
tracing-opentelemetry = "0.21"
core-config = { path = "../core-config" }

[features]
default = []
jaeger = ["opentelemetry-jaeger"]

[dev-dependencies]
tokio-test = "0.4"
