[package]
name = "core-privacy"
version = "0.1.0"
edition = "2021"
authors = ["arkSong <arksong2018@gmail.com>"]
description = "Data privacy and zero-knowledge proof system for StableRWA platform"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arkSong/rwa-platform"
keywords = ["privacy", "zero-knowledge", "zkp", "encryption", "anonymity"]
categories = ["cryptography", "privacy"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Decimal arithmetic
rust_decimal = { version = "1.33", features = ["serde-float"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "rust_decimal"] }

# Redis for caching
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Advanced cryptography
ring = "0.17"
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
hex = "0.4"
rand = "0.8"
zeroize = { version = "1.7", features = ["zeroize_derive"] }

# Zero-knowledge proofs
ark-std = { version = "0.4", optional = true }
ark-ff = { version = "0.4", optional = true }
ark-ec = { version = "0.4", optional = true }
ark-poly = { version = "0.4", optional = true }
ark-relations = { version = "0.4", optional = true }
ark-r1cs-std = { version = "0.4", optional = true }
ark-groth16 = { version = "0.4", optional = true }
ark-bn254 = { version = "0.4", optional = true }

# Bulletproofs
bulletproofs = { version = "4.0", optional = true }
curve25519-dalek = { version = "4.1", optional = true }

# Homomorphic encryption
concrete = { version = "0.2", optional = true }

# Secure multi-party computation
fancy-garbling = { version = "0.3", optional = true }

# Differential privacy
smartnoise-runtime = { version = "0.3", optional = true }

# Advanced encryption
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
x25519-dalek = "2.0"
ed25519-dalek = "2.0"

# Merkle trees
merkle = "2.0"
rs_merkle = "1.4"

# Configuration
config = "0.14"

# Metrics
prometheus = "0.13"

# Rate limiting
governor = "0.6"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Parallel processing
rayon = "1.8"

# Fast hashing
fxhash = "0.2"

# Math operations
num-bigint = "0.4"
num-traits = "0.2"

# Base64 encoding
base64 = "0.21"

# Internal dependencies
core-utils = { path = "../core-utils" }
core-security = { path = "../core-security" }
core-blockchain = { path = "../core-blockchain" }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.8"

[features]
default = ["zkp", "homomorphic", "differential-privacy", "secure-computation"]
zkp = ["ark-std", "ark-ff", "ark-ec", "ark-poly", "ark-relations", "ark-r1cs-std", "ark-groth16", "ark-bn254"]
bulletproofs = ["dep:bulletproofs", "curve25519-dalek"]
homomorphic = ["concrete"]
secure-computation = ["fancy-garbling"]
differential-privacy = ["smartnoise-runtime"]
advanced-crypto = []
